--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
-<VBox prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BoardController">
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
+
+<VBox prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BoardController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
@@ -19,9 +20,8 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edycja">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Cofnij" />
-                        <MenuItem mnemonicParsing="false" text="Powtórz" />
-                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#undo" text="Cofnij" />
+                        <MenuItem mnemonicParsing="false" onAction="#redo" text="Powtórz" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Pomoc">
@@ -43,13 +43,13 @@
                                 <Color red="0.624" green="0.624" blue="0.624" fx:id="x8" />
                             </textFill>
                         </Label>
-                        <GridPane fx:id="playerBoard" gridLinesVisible="true" layoutX="14.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="40.0">
+                        <GridPane fx:id="playerBoard" gridLinesVisible="true" layoutX="14.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0">
                         </GridPane>
                     </children>
                 </AnchorPane>
-                <AnchorPane fx:id="playersBoard">
+                <AnchorPane fx:id="playersBoard" prefHeight="544.0" prefWidth="179.0">
                     <children>
-                        <Label fx:id="instruction" alignment="CENTER" layoutX="45.0" layoutY="14.0" wrapText="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="15.0">
+                        <Label fx:id="instruction" alignment="CENTER" contentDisplay="CENTER" layoutY="14.0" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
                             <font>
                                 <Font size="15.0" fx:id="x1" />
                             </font>
@@ -60,14 +60,14 @@
                                 <Insets />
                             </opaqueInsets>
                         </Label>
-                        <Button fx:id="shipPlace1" layoutX="36.0" layoutY="59.0" mnemonicParsing="false" onAction="#place1Ship" prefHeight="25.0" prefWidth="116.0" text="1-masztowiec" />
+                        <Button fx:id="shipPlace1" layoutX="33.0" layoutY="72.0" mnemonicParsing="false" onAction="#place1Ship" prefHeight="25.0" prefWidth="116.0" text="1-masztowiec" />
                         <Button fx:id="startGame" layoutX="9.0" layoutY="496.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="188.0" text="Rozpocznij grę" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                        <Button fx:id="shipPlace2" layoutX="36.0" layoutY="98.0" mnemonicParsing="false" onAction="#place2Ship" prefHeight="25.0" prefWidth="116.0" text="2-masztowiec" />
-                        <Button fx:id="shipPlace3" layoutX="36.0" layoutY="136.0" mnemonicParsing="false" onAction="#place3Ship" prefHeight="25.0" prefWidth="116.0" text="3-masztowiec" />
-                        <Button fx:id="shipPlace4" layoutX="36.0" layoutY="177.0" mnemonicParsing="false" onAction="#place4Ship" prefHeight="25.0" prefWidth="116.0" text="4-masztowiec" />
-                        <Button layoutX="36.0" layoutY="218.0" mnemonicParsing="false" onAction="#toggleOrientation" prefHeight="25.0" prefWidth="116.0" text="Toggle orientation" />
-                        <Button fx:id="undoBtn" layoutX="36.0" layoutY="259.0" mnemonicParsing="false" onAction="#undo" prefHeight="25.0" prefWidth="116.0" text="UNDO" />
-                        <Button fx:id="redoBtn" layoutX="36.0" layoutY="300.0" mnemonicParsing="false" onAction="#redo" prefHeight="25.0" prefWidth="116.0" text="REDO" />
+                        <Button fx:id="shipPlace2" layoutX="33.0" layoutY="111.0" mnemonicParsing="false" onAction="#place2Ship" prefHeight="25.0" prefWidth="116.0" text="2-masztowiec" />
+                        <Button fx:id="shipPlace3" layoutX="33.0" layoutY="149.0" mnemonicParsing="false" onAction="#place3Ship" prefHeight="25.0" prefWidth="116.0" text="3-masztowiec" />
+                        <Button fx:id="shipPlace4" layoutX="33.0" layoutY="188.0" mnemonicParsing="false" onAction="#place4Ship" prefHeight="25.0" prefWidth="116.0" text="4-masztowiec" />
+                        <Button layoutX="32.0" layoutY="272.0" mnemonicParsing="false" onAction="#toggleOrientation" prefHeight="25.0" prefWidth="116.0" text="Obróć" />
+                        <Button fx:id="undoBtn" layoutX="32.0" layoutY="316.0" mnemonicParsing="false" onAction="#undo" prefHeight="25.0" prefWidth="116.0" text="UNDO" />
+                        <Button fx:id="redoBtn" layoutX="32.0" layoutY="348.0" mnemonicParsing="false" onAction="#redo" prefHeight="25.0" prefWidth="116.0" text="REDO" />
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="550.0" prefWidth="550.0">
@@ -80,7 +80,7 @@
                                 <Color red="0.624" green="0.624" blue="0.624" fx:id="x81" />
                             </textFill>
                         </Label>
-                        <GridPane fx:id="computerBoard" gridLinesVisible="true" layoutX="14.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="40.0">
+                        <GridPane fx:id="computerBoard" gridLinesVisible="true" layoutX="14.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0">
                         </GridPane>
                     </children>
                 </AnchorPane>
