Add authorization and authentication and connect it to game flow
- Make authorization and authentication working properly
- Improved game flow
- Add finished view
- Fix known bugs
- Completed docs

--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
+
 <VBox prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.iisg.to.battleships.controller.BoardController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
@@ -46,7 +47,7 @@
                         </GridPane>
                     </children>
                 </AnchorPane>
-                <AnchorPane fx:id="playersBoard" prefHeight="544.0" prefWidth="179.0">
+                <AnchorPane fx:id="centerPanel" prefHeight="544.0" prefWidth="179.0">
                     <children>
                         <Label fx:id="instruction" alignment="CENTER" contentDisplay="CENTER" layoutY="14.0" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
                             <font>
@@ -60,13 +61,21 @@
                             </opaqueInsets>
                         </Label>
                         <Button fx:id="shipPlace1" layoutX="33.0" layoutY="72.0" mnemonicParsing="false" onAction="#place1Ship" prefHeight="25.0" prefWidth="116.0" text="1-masztowiec" />
-                        <Button fx:id="startGame" onAction="#startGame" layoutX="9.0" layoutY="496.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="188.0" text="Rozpocznij grę" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                        <Button fx:id="startGame" layoutX="9.0" layoutY="496.0" mnemonicParsing="false" onAction="#startGame" prefHeight="48.0" prefWidth="188.0" text="Rozpocznij grę" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                         <Button fx:id="shipPlace2" layoutX="33.0" layoutY="111.0" mnemonicParsing="false" onAction="#place2Ship" prefHeight="25.0" prefWidth="116.0" text="2-masztowiec" />
                         <Button fx:id="shipPlace3" layoutX="33.0" layoutY="149.0" mnemonicParsing="false" onAction="#place3Ship" prefHeight="25.0" prefWidth="116.0" text="3-masztowiec" />
                         <Button fx:id="shipPlace4" layoutX="33.0" layoutY="188.0" mnemonicParsing="false" onAction="#place4Ship" prefHeight="25.0" prefWidth="116.0" text="4-masztowiec" />
-                        <Button layoutX="32.0" layoutY="272.0" mnemonicParsing="false" onAction="#toggleOrientation" prefHeight="25.0" prefWidth="116.0" text="Obróć" />
-                        <Button fx:id="undoBtn" layoutX="32.0" layoutY="316.0" mnemonicParsing="false" onAction="#undo" prefHeight="25.0" prefWidth="116.0" text="UNDO" />
-                        <Button fx:id="redoBtn" layoutX="32.0" layoutY="348.0" mnemonicParsing="false" onAction="#redo" prefHeight="25.0" prefWidth="116.0" text="REDO" />
+                        <Button fx:id="rotateBtn" layoutX="32.0" layoutY="272.0" mnemonicParsing="false" onAction="#toggleOrientation" prefHeight="25.0" prefWidth="116.0" text="Obróć" />
+                        <Button fx:id="undoBtn" layoutX="32.0" layoutY="316.0" mnemonicParsing="false" onAction="#undo" prefHeight="25.0" prefWidth="116.0" text="Cofnij" />
+                        <Button fx:id="redoBtn" layoutX="32.0" layoutY="348.0" mnemonicParsing="false" onAction="#redo" prefHeight="25.0" prefWidth="116.0" text="Powtórz" />
+                        <RadioButton id="easy" fx:id="easy" layoutX="57.0" layoutY="414.0" mnemonicParsing="false" onAction="#setEasy" text="Łatwy">
+                            <toggleGroup>
+                                <ToggleGroup fx:id="level" />
+                            </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="medium" layoutX="57.0" layoutY="436.0" mnemonicParsing="false" onAction="#setMedium" selected="true" text="Średni" toggleGroup="$level" />
+                        <RadioButton fx:id="hard" layoutX="57.0" layoutY="458.0" mnemonicParsing="false" onAction="#setHard" text="Trudny" toggleGroup="$level" />
+                        <Label fx:id="levelLabel" layoutX="45.0" layoutY="389.0" text="Poziom trudności" />
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="550.0" prefWidth="550.0">
@@ -87,7 +96,7 @@
         </HBox>
         <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
             <children>
-                <Label maxHeight="1.7976931348623157E308" prefHeight="16.0" prefWidth="653.0" text="Oczekiwanie na ustawienie statków" HBox.hgrow="ALWAYS">
+                <Label fx:id="statusText" maxHeight="1.7976931348623157E308" prefHeight="16.0" prefWidth="653.0" text="Oczekiwanie na ustawienie statków" HBox.hgrow="ALWAYS">
                     <font>
                         <Font size="11.0" fx:id="x3" />
                     </font>
@@ -95,7 +104,7 @@
                         <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
                     </textFill>
                 </Label>
-                <Label alignment="CENTER_RIGHT" font="$x3" prefHeight="16.0" prefWidth="657.0" text="Pozostałych statków do zniszczenia: 10" textAlignment="RIGHT" textFill="$x4" HBox.hgrow="NEVER" />
+                <Label alignment="CENTER_RIGHT" font="$x3" prefHeight="16.0" prefWidth="657.0" text="Pozostałych statków do zniszczenia: --" textAlignment="RIGHT" textFill="$x4" HBox.hgrow="NEVER" />
             </children>
             <padding>
                 <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
