--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -65,9 +65,10 @@
                         <Button fx:id="shipPlace2" layoutX="33.0" layoutY="111.0" mnemonicParsing="false" onAction="#place2Ship" prefHeight="25.0" prefWidth="116.0" text="2-masztowiec" />
                         <Button fx:id="shipPlace3" layoutX="33.0" layoutY="149.0" mnemonicParsing="false" onAction="#place3Ship" prefHeight="25.0" prefWidth="116.0" text="3-masztowiec" />
                         <Button fx:id="shipPlace4" layoutX="33.0" layoutY="188.0" mnemonicParsing="false" onAction="#place4Ship" prefHeight="25.0" prefWidth="116.0" text="4-masztowiec" />
-                        <Button fx:id="rotateBtn" layoutX="32.0" layoutY="272.0" mnemonicParsing="false" onAction="#toggleOrientation" prefHeight="25.0" prefWidth="116.0" text="Obróć" />
-                        <Button fx:id="undoBtn" layoutX="32.0" layoutY="316.0" mnemonicParsing="false" onAction="#undo" prefHeight="25.0" prefWidth="116.0" text="Cofnij" />
-                        <Button fx:id="redoBtn" layoutX="32.0" layoutY="348.0" mnemonicParsing="false" onAction="#redo" prefHeight="25.0" prefWidth="116.0" text="Powtórz" />
+                        <Button fx:id="rotateBtn" layoutX="32.0" layoutY="284.0" mnemonicParsing="false" onAction="#toggleOrientation" prefHeight="25.0" prefWidth="116.0" text="Obróć" />
+                        <Button fx:id="randomize" layoutX="14.0" layoutY="235.0" mnemonicParsing="false" onAction="#setPlayersShipsRandom" prefHeight="34.0" prefWidth="153.0" text="Losuj ustawienie" />
+                        <Button fx:id="undoBtn" layoutX="33.0" layoutY="332.0" mnemonicParsing="false" onAction="#undo" prefHeight="25.0" prefWidth="116.0" text="Cofnij" />
+                        <Button fx:id="redoBtn" layoutX="33.0" layoutY="364.0" mnemonicParsing="false" onAction="#redo" prefHeight="25.0" prefWidth="116.0" text="Powtórz" />
                         <RadioButton id="easy" fx:id="easy" layoutX="57.0" layoutY="414.0" mnemonicParsing="false" onAction="#setEasy" text="Łatwy">
                             <toggleGroup>
                                 <ToggleGroup fx:id="level" />
