--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -18,7 +18,7 @@
                         <MenuItem mnemonicParsing="false" onAction="#menuClose" text="Zamknij" />
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Edycja">
+                <Menu fx:id="editMenu" mnemonicParsing="false" text="Edycja">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#undo" text="Cofnij" />
                         <MenuItem mnemonicParsing="false" onAction="#redo" text="Powtórz" />
@@ -105,7 +105,7 @@
                         <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
                     </textFill>
                 </Label>
-                <Label alignment="CENTER_RIGHT" font="$x3" prefHeight="16.0" prefWidth="657.0" text="Pozostałych statków do zniszczenia: --" textAlignment="RIGHT" textFill="$x4" HBox.hgrow="NEVER" />
+                <Label alignment="CENTER_RIGHT" font="$x3" prefHeight="16.0" prefWidth="657.0" text="Pozostałych statków do zniszczenia: --" textAlignment="RIGHT" textFill="$x4" visible="false" HBox.hgrow="NEVER" />
             </children>
             <padding>
                 <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
