--- a/src/main/resources/view/loginView.fxml
+++ b/src/main/resources/view/loginView.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <AnchorPane prefHeight="247.0" prefWidth="419.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.iisg.to.battleships.controller.LoginController">
    <children>
       <Button layoutX="330.0" layoutY="212.0" mnemonicParsing="false" onAction="#register" text="Zarejestruj się">
@@ -24,5 +23,6 @@
 
       <Label fx:id="message" alignment="CENTER" layoutX="98.0" layoutY="215.0" prefHeight="17.0" prefWidth="226.0" textAlignment="CENTER" />
 
+      <ProgressIndicator fx:id="progress" layoutX="196.0" layoutY="215.0" prefHeight="27.0" prefWidth="27.0" visible="false" />
    </children>
 </AnchorPane>
