--- a/src/main/resources/view/loginView.fxml
+++ b/src/main/resources/view/loginView.fxml
@@ -5,16 +5,16 @@
 <?import javafx.scene.text.Font?>
 <AnchorPane prefHeight="247.0" prefWidth="419.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.iisg.to.battleships.controller.LoginController">
    <children>
-      <Button layoutX="330.0" layoutY="212.0" mnemonicParsing="false" onAction="#register" text="Zarejestruj się">
+      <Button layoutX="330.0" layoutY="212.0" mnemonicParsing="false" onAction="#register" text="Register">
          <font>
             <Font size="10.0" />
          </font>
       </Button>
       <TextField fx:id="login" layoutX="135.0" layoutY="89.0" />
       <PasswordField id="password" fx:id="password" layoutX="136.0" layoutY="140.0" />
-      <Button fx:id="loginButton" layoutX="136.0" layoutY="176.0" mnemonicParsing="false" onAction="#loginClickHandle" prefHeight="25.0" prefWidth="149.0" text="Zaloguj się" />
-      <Label layoutX="176.0" layoutY="72.0" text="Adres e-mail" />
-      <Label layoutX="195.0" layoutY="123.0" text="Hasło" />
+      <Button fx:id="loginButton" layoutX="136.0" layoutY="176.0" mnemonicParsing="false" onAction="#loginClickHandle" prefHeight="25.0" prefWidth="149.0" text="Log in" />
+      <Label layoutX="173.0" layoutY="72.0" text="E-mail address" />
+      <Label layoutX="187.0" layoutY="123.0" text="Password" />
       <Label layoutX="138.0" layoutY="14.0" text="Battleships" textAlignment="CENTER">
          <font>
             <Font size="30.0" />
